<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <ImageView
        android:id="@+id/bgAlbumArt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_bg"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/circle_bg"
        android:contentDescription="@string/backbtnimage"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_24"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/favBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle_bg"
        android:contentDescription="@string/favbtnimage"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_favorite_border_24"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/imageAlbumArtPlayer"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/avatarimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favBtn"
        android:background="@drawable/circle_bg" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bgAlbumArt"
        app:layout_constraintTop_toBottomOf="@+id/imageAlbumArtPlayer" />

    <TextView
        android:id="@+id/textArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/artist"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />


    <com.frolo.waveformseekbar.WaveformSeekBar
        android:id="@+id/waveformSeekBar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textArtist"
        app:waveProgressColor="@color/white" />

    <TextView
        android:id="@+id/textElapsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/_0_00"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waveformSeekBar" />

    <TextView
        android:id="@+id/textDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/waveformSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/waveformSeekBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/bgAlbumArt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/buttonRepeat"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btnrepeat"
            app:srcCompat="@drawable/ic_repeat_one_24"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/buttonPrev"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/prevbtn"
            app:srcCompat="@drawable/ic_skip_previous_24"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/buttonPlayPause"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/white_circle_bg"
            android:contentDescription="@string/play_btn_image"
            app:srcCompat="@drawable/ic_play_arrow_24" />

        <ImageButton
            android:id="@+id/buttonNext"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/nextbtn"
            app:srcCompat="@drawable/ic_skip_next_24"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/buttonShuffle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/buttonshuffle"
            app:srcCompat="@drawable/ic_shuffle_24"
            app:tint="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>